[gd_scene load_steps=33 format=3 uid="uid://sdcjx3brue1x"]

[ext_resource type="Texture2D" uid="uid://btt2s3yfk7rgl" path="res://toolkit/animations/animations.png" id="1_ba8gm"]
[ext_resource type="Script" uid="uid://cwtn0dwy6j8f0" path="res://door.gd" id="1_v6xrn"]
[ext_resource type="Script" uid="uid://5s40abdygg7f" path="res://component/scene_transition_component.gd" id="3_0phs7"]
[ext_resource type="Script" uid="uid://couw105c3bde4" path="res://addons/godot_state_charts/state_chart.gd" id="4_ptf7r"]
[ext_resource type="Script" uid="uid://jk2jm1g6q853" path="res://addons/godot_state_charts/compound_state.gd" id="5_24eas"]
[ext_resource type="Script" uid="uid://cytafq8i1y8qm" path="res://addons/godot_state_charts/atomic_state.gd" id="6_xg3tq"]
[ext_resource type="Script" uid="uid://cf1nsco3w0mf6" path="res://addons/godot_state_charts/transition.gd" id="7_quvdd"]
[ext_resource type="Script" uid="uid://btv1eun0s0lww" path="res://door_closed.gd" id="8_ejk4w"]
[ext_resource type="Script" uid="uid://cq7qavx7370ak" path="res://door_open.gd" id="9_vqe75"]

[sub_resource type="Animation" id="Animation_ptf7r"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("door:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.4, 0.533333, 0.633333, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("lock:frame")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.866667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("lock:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.9, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_24eas"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("door:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("lock:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("lock:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_xg3tq"]
resource_name = "close"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("door:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [4, 3, 2, 1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("lock:frame")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.266667, 0.333333, 0.4, 0.466667, 0.533333, 0.6, 0.666667, 0.733333, 0.8, 0.866667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [9, 8, 7, 6, 5, 4, 3, 2, 1, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("lock:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0333334, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xg3tq"]
_data = {
&"RESET": SubResource("Animation_24eas"),
&"close": SubResource("Animation_xg3tq"),
&"open": SubResource("Animation_ptf7r")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_ba8gm"]
atlas = ExtResource("1_ba8gm")
region = Rect2(28, 54, 24, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6xrn"]
atlas = ExtResource("1_ba8gm")
region = Rect2(28, 54, 24, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_0phs7"]
atlas = ExtResource("1_ba8gm")
region = Rect2(76, 54, 24, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_50cdl"]
atlas = ExtResource("1_ba8gm")
region = Rect2(124, 54, 24, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5njw"]
atlas = ExtResource("1_ba8gm")
region = Rect2(172, 54, 24, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xadh"]
atlas = ExtResource("1_ba8gm")
region = Rect2(220, 54, 24, 27)

[sub_resource type="SpriteFrames" id="SpriteFrames_6hwww"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ba8gm")
}],
"loop": true,
"name": &"closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6xrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0phs7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50cdl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5njw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xadh")
}],
"loop": false,
"name": &"open",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_6hwww"]
atlas = ExtResource("1_ba8gm")
region = Rect2(221, 144, 17, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1oua"]
atlas = ExtResource("1_ba8gm")
region = Rect2(238, 144, 17, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptf7r"]
atlas = ExtResource("1_ba8gm")
region = Rect2(255, 144, 17, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_24eas"]
atlas = ExtResource("1_ba8gm")
region = Rect2(272, 144, 17, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_xg3tq"]
atlas = ExtResource("1_ba8gm")
region = Rect2(289, 144, 17, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_quvdd"]
atlas = ExtResource("1_ba8gm")
region = Rect2(306, 144, 17, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejk4w"]
atlas = ExtResource("1_ba8gm")
region = Rect2(323, 144, 17, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqe75"]
atlas = ExtResource("1_ba8gm")
region = Rect2(340, 144, 17, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nm82"]
atlas = ExtResource("1_ba8gm")
region = Rect2(357, 144, 17, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvkv3"]
atlas = ExtResource("1_ba8gm")
region = Rect2(374, 144, 17, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_5esjk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hwww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1oua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptf7r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24eas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xg3tq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_quvdd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejk4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqe75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nm82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvkv3")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0phs7"]
size = Vector2(30, 47)

[node name="door" type="Node2D"]
script = ExtResource("1_v6xrn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xg3tq")
}

[node name="door" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_6hwww")
animation = &"open"

[node name="lock" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_5esjk")

[node name="SceneTransitionComponent" type="Node2D" parent="."]
script = ExtResource("3_0phs7")
metadata/_custom_type_script = "uid://5s40abdygg7f"

[node name="interact" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="interact"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_0phs7")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("4_ptf7r")
metadata/_custom_type_script = "uid://couw105c3bde4"

[node name="CompoundState" type="Node" parent="StateChart"]
script = ExtResource("5_24eas")
initial_state = NodePath("closed")

[node name="closed" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("6_xg3tq")

[node name="toOpen" type="Node" parent="StateChart/CompoundState/closed"]
script = ExtResource("7_quvdd")
to = NodePath("../../open")
event = &"open"
delay_in_seconds = "0.0"

[node name="closed" type="Node" parent="StateChart/CompoundState/closed"]
script = ExtResource("8_ejk4w")

[node name="open" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("6_xg3tq")

[node name="toClosed" type="Node" parent="StateChart/CompoundState/open"]
script = ExtResource("7_quvdd")
to = NodePath("../../closed")
event = &"close"
delay_in_seconds = "0.0"

[node name="open" type="Node" parent="StateChart/CompoundState/open"]
script = ExtResource("9_vqe75")

[connection signal="state_entered" from="StateChart/CompoundState/closed" to="StateChart/CompoundState/closed/closed" method="_on_closed_state_entered"]
[connection signal="state_exited" from="StateChart/CompoundState/closed" to="StateChart/CompoundState/closed/closed" method="_on_closed_state_exited"]
[connection signal="state_processing" from="StateChart/CompoundState/closed" to="StateChart/CompoundState/closed/closed" method="_on_closed_state_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/open" to="StateChart/CompoundState/open/open" method="_on_open_state_entered"]
[connection signal="state_exited" from="StateChart/CompoundState/open" to="StateChart/CompoundState/open/open" method="_on_open_state_exited"]
[connection signal="state_processing" from="StateChart/CompoundState/open" to="StateChart/CompoundState/open/open" method="_on_open_state_processing"]
